# EVER

.github/workflows/: pr-build.yml  release.yml
EVER/: CMakeLists.txt
EVER/src/core/: script.cpp
EVER/src/hooking/: HookDefinitions.h  ScanPatterns.h
EVER/src/utils/: CrashHandler.cpp  logger.cpp
EVER/src/video/: EncoderSession.cpp  EncoderSession.h
